--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <hr>
     <section class="tabs">
         <div class="container">
-            <div class="moldure-img">
+            <div class="moldure-img mob">
                 <img src="img/stranger.jpg" alt="tv">
             </div>
             <div class="text">
@@ -64,7 +64,7 @@
             </div>
             <div class="moldure-img-tv">
                 <img src="img/device-pile.png" alt="tv">
-                <video class="video-tv2" autoplay loop playsinline src="video/video-devices.m4v"></video>
+                <video class="video-tv2" autoplay loop muted playsinline src="video/video-devices.m4v"></video>
             </div>
         </div>
 
@@ -72,7 +72,7 @@
     <hr>
     <section class="tabs">
         <div class="container">
-            <div class="moldure-img">
+            <div class="moldure-img mob">
                 <img src="img/kids.png" alt="tv">
             </div>
             <div class="text">
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="contact">
-            <h3>Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</h3>
+            <p>Pronto para assistir? Informe seu email para criar ou reiniciar sua assinatura.</p>
             <div class="input-wrapper">
                 <input type="email" placeholder="Email">
                 <a href="#" class="btn-sign">
